Bugfix: The alignment of the thumbnails in single-photoalbum.php was off

--- a/css/phone.scss
+++ b/css/phone.scss
@@ -162,6 +162,10 @@ html
 				{
 					width:calc(100% - 100px);
 				}
+				div.related_posts
+				{
+					width:calc((100%) - 5px);
+				}
 				main#single_photoalbum .Thumbnail
 				{
 					width:calc((100%) - 10px);
